--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,6 +6,11 @@
   list-style-type: none;
 }
 
+.header__block {
+  display: flex;
+  justify-content: space-between;
+}
+
 .header__img {
   width: 30%;
 }
